[tool.poetry]
name = "repoman"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
rdflib = "^7.0.0"
rdflib-jsonld = "^0.6.2"
httpx = "^0.27.2"
iiif-prezi3 = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
